--- a/source/index.html
+++ b/source/index.html
@@ -86,13 +86,16 @@
     </main>
     <footer class="page-footer">
       <section class="page-footer__contacts">
+        <h1 class="visually-hidden">Наши контакты</h1>
         <div class="page-footer__contacts-wrapper">
           <p class="page-footer__contacts--invite">Приглашаем к сотрудничеству дилеров!</p>
-          <p class="page-footer__contacts--address">Приглашаем к сотрудничеству дилеров!</p>
+          <p class="page-footer__contacts--address">ул. Большая Конюшенная, д. 19/8
+Санкт-Петербург</p>
         </div>
         <img class="page-footer__contacts-map" src="img/map.jpg" width="1345" height="645" alt="Вы можете нас найти по адресу: ул.Большая Конюшенная, д.19/8, Санкт-Петербург">
       </section>
       <section class="page-footer__socials">
+        <h1 class="visually-hidden">Мы в соцсетях</h1>
         <div class="page-footer__socials-logo">
           <a class="page-footer__logo-link">
             <img class="page-footer__logo" src="img/footer-logo.svg" width="128" height="24" alt="Перейти на главную страницу Кэт Энерджи" >
