--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
     <header class="page-header">
       <a class="page-header__logo">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Логотип сайта Кэт Энерджи">
-        <h1><b>Cat</b> Energy</h1>
+        <span class="page-header__title"><b>Cat</b> Energy</span>
       </a>
       <nav class="main-navigation">
         <button class="main-navigation__toggle" type="button">
@@ -86,7 +86,7 @@
     </main>
     <footer class="page-footer">
       <section class="page-footer__contacts">
-        <h1 class="visually-hidden">Наши контакты</h1>
+        <h2 class="visually-hidden">Наши контакты</h2>
         <div class="page-footer__contacts-wrapper">
           <p class="page-footer__contacts--invite">Приглашаем к сотрудничеству дилеров!</p>
           <p class="page-footer__contacts--address">ул. Большая Конюшенная, д. 19/8
@@ -95,10 +95,10 @@
         <img class="page-footer__contacts-map" src="img/map.jpg" width="1345" height="645" alt="Вы можете нас найти по адресу: ул.Большая Конюшенная, д.19/8, Санкт-Петербург">
       </section>
       <section class="page-footer__socials">
-        <h1 class="visually-hidden">Мы в соцсетях</h1>
+        <h2 class="visually-hidden">Мы в соцсетях</h2>
         <div class="page-footer__socials-logo">
           <a class="page-footer__logo-link">
-            <img class="page-footer__logo" src="img/footer-logo.svg" width="128" height="24" alt="Перейти на главную страницу Кэт Энерджи" >
+            <span class="page-footer__title"><b>Cat</b>Energy</span>
           </a>
         </div>
         <ul class="page-footer__socials-list">
