Добавлены классы ссылкам в списках, испарвлены ссылки в логотипе

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,18 +8,20 @@
     <header class="page-header">
       <a class="page-header__logo" href="index.html">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Логотип сайта Кэт Энерджи">
-        <span class="page-header__title"><b>Cat</b> Energy</span>
+      </a>
+      <a class="page-header__logo--marketname" href="index.html">
+        <span class="marketname"><b>Cat</b> Energy</span>
       </a>
       <nav class="main-navigation">
         <button class="main-navigation__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <ul class="main-navigation__list">
-          <li class="main-navigation__item">
-            <a href="index.html">Главная</a>
+          <li>
+            <a class="main-navigation__item current-item">Главная</a>
           </li>
-          <li class="main-navigation__item">
-            <a>Каталог продукции</a>
+          <li>
+            <a class="main-navigation__item" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-navigation__item">
             <a href="form.html">Подбор программы</a>
@@ -32,8 +34,8 @@
       <section class="goods">
         <h2 class="goods__title">Каталог продукции</h2>
         <ul class="goods">
-          <li class="goods__item">
-            <a href="product-1.html">
+          <li>
+            <a class="goods__item" href="product-1.html">
               <img class="goods__item-img" src="img/catalog-1-mobile.jpg" width="140" height="144" alt="Cat Energy Pro 500 грамм со вкусом курицы">
               <div class="goods__item-description">
                 <span class="goods__item-name">Cat Energy Pro 500 г</span>
@@ -55,8 +57,8 @@
             </a>
             <a class="button button--order" href="order.html">Заказать</a>
           </li>
-          <li class="goods__item">
-            <a href="product-2.html">
+          <li>
+            <a class="goods__item" href="product-2.html">
               <img class="goods__item-img" src="img/catalog-2-mobile.jpg" width="140" height="144" alt="Cat Energy Pro 1000 грамм со вкусом курицы">
               <div class="goods__item-description">
                 <span class="goods__item-name">Cat Energy Pro 1000 г</span>
@@ -78,8 +80,8 @@
             </a>
             <a class="button button--order" href="order.html">Заказать</a>
           </li>
-          <li class="goods__item">
-            <a href="product-3.html">
+          <li>
+            <a class="goods__item" href="product-3.html">
               <img class="goods__item-img" src="img/catalog-3-mobile.jpg" width="140" height="144" alt="Cat Energy Pro 500 грамм со вкусом рыбы">
               <div class="goods__item-description">
                 <span class="goods__item-name">Cat Energy Pro 500 г</span>
@@ -101,8 +103,8 @@
             </a>
             <a class="button button--order" href="order.html">Заказать</a>
           </li>
-          <li class="goods__item">
-            <a href="product-4.html">
+          <li>
+            <a class="goods__item" href="product-4.html">
               <img class="goods__item-img" src="img/catalog-4-mobile.jpg" width="140" height="144" alt="Cat Energy Pro 500 грамм со вкусом рыбы">
               <div class="goods__item-description">
                 <span class="goods__item-name">Cat Energy Pro 1000 г</span>
@@ -124,8 +126,8 @@
             </a>
             <a class="button button--order" href="order.html">Заказать</a>
           </li>
-          <li class="goods__item">
-            <a href="product-5.html">
+          <li>
+            <a class="goods__item" href="product-5.html">
               <img class="goods__item-img" src="img/catalog-5-mobile.jpg" width="140" height="144" alt="Cat Energy Slim 500 грамм со вкусом гречки">
               <div class="goods__item-description">
                 <span class="goods__item-name">Cat Energy Slim 500 г</span>
@@ -147,8 +149,8 @@
             </a>
             <a class="button button--order" href="order.html">Заказать</a>
           </li>
-          <li class="goods__item">
-            <a href="product-6.html">
+          <li>
+            <a class="goods__item" href="product-6.html">
               <img class="goods__item-img" src="img/catalog-6-mobile.jpg" width="140" height="144" alt="Cat Energy Slim 500 грамм со вкусом гречки">
               <div class="goods__item-description">
                 <span class="goods__item-name">Cat Energy Slim 500 г</span>
@@ -170,8 +172,8 @@
             </a>
             <a class="button button--order" href="order.html">Заказать</a>
           </li>
-          <li class="goods__item">
-            <a href="product-7.html">
+          <li>
+            <a class="goods__item" href="product-7.html">
               <img class="goods__item-img" src="img/catalog-7-mobile.jpg" width="140" height="144" alt="Cat Energy Slim 500 грамм со вкусом риса">
               <div class="goods__item-description">
                 <span class="goods__item-name">Cat Energy Slim 500 г</span>
@@ -193,8 +195,8 @@
             </a>
             <a class="button button--order" href="order.html">Заказать</a>
           </li>
-          <li class="goods__item goods__item--more">
-            <a href="products.html">
+          <li>
+            <a class="goods__item goods__item--more" href="products.html">
               <p class="goods__item-name">Показать еще 100500 товаров</p>
               <p>На самом деле вкусов гораздо больше!</p>
             </a>
@@ -205,8 +207,8 @@
       <section class="extras">
         <h2 class="extras__title">Дополнительные товары</h2>
         <ul class="extras__list">
-          <li class="extras__item">
-            <a href="products.html">
+          <li>
+            <a class="extras__item" href="products.html">
               <span class="extras__item-name">Сахарозаменитель</span>
               <div class="extras__item-wrapper">
                 <span class="extras__item-price">1 упаковка (100 г)</span>
@@ -215,8 +217,8 @@
             </a>
             <a class="button button--order" href="order.html">Заказать</a>
           </li>
-          <li class="extras__item">
-            <a href="products.html">
+          <li>
+            <a class="extras__item" href="products.html">
               <span class="extras__item-name">Питьевая вода</span>
               <div class="extras__item-wrapper">
                 <span class="extras__item-price">5 литров</span>
@@ -225,8 +227,8 @@
             </a>
             <a class="button button--order" href="order.html">Заказать</a>
           </li>
-          <li class="extras__item">
-            <a href="products.html">
+          <li>
+            <a class="extras__item" href="products.html">
               <span class="extras__item-name">Молоко</span>
               <div class="extras__item-wrapper">
                 <span class="extras__item-price">1 литр</span>
@@ -235,8 +237,8 @@
             </a>
             <a class="button button--order" href="order.html">Заказать</a>
           </li>
-          <li class="extras__item">
-            <a href="products.html">
+          <li>
+            <a class="extras__item" href="products.html">
               <span class="extras__item-name">Витамины</span>
               <div class="extras__item-wrapper">
                 <span class="extras__item-price">1 упаковка (30 г)</span>
@@ -266,21 +268,21 @@
         <h2 class="visually-hidden">Мы в соцсетях</h2>
         <div class="page-footer__socials-logo">
           <a class="page-footer__logo-link">
-            <span class="page-footer__title"><b>Cat</b>Energy</span>
+            <span class="marketname"><b>Cat</b>Energy</span>
           </a>
         </div>
         <ul class="page-footer__socials-list">
-          <li class="page-footer__socials-item">
+          <li>
             <a class="page-footer__link page-footer__link--vk" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Мы во ВКонтакте</span>
             </a>
           </li>
-          <li class="page-footer__socials-item">
+          <li>
             <a class="page-footer__link page-footer__link--instagram" href="https://instagram.com/htmlacademy">
               <span class="visually-hidden">Мы в Инстаграме</span>
             </a>
           </li>
-          <li class="page-footer__socials-item">
+          <li>
             <a class="page-footer__link page-footer__link--fb" href="https://facebook.com/htmlacademy">
               <span class="visually-hidden">Мы в Фейсбуке</span>
             </a>
