--- a/source/index.html
+++ b/source/index.html
@@ -8,18 +8,20 @@
     <header class="page-header">
       <a class="page-header__logo">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Логотип сайта Кэт Энерджи">
-        <span class="page-header__title"><b>Cat</b> Energy</span>
+      </a>
+      <a class="page-header__logo--marketname">
+        <span class="marketname"><b>Cat</b> Energy</span>
       </a>
       <nav class="main-navigation">
         <button class="main-navigation__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <ul class="main-navigation__list">
-          <li class="main-navigation__item">
-            <a>Главная</a>
+          <li>
+            <a class="main-navigation__item current-item">Главная</a>
           </li>
-          <li class="main-navigation__item">
-            <a href="catalog.html">Каталог продукции</a>
+          <li>
+            <a class="main-navigation__item" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-navigation__item">
             <a href="form.html">Подбор программы</a>
@@ -98,21 +100,21 @@
         <h2 class="visually-hidden">Мы в соцсетях</h2>
         <div class="page-footer__socials-logo">
           <a class="page-footer__logo-link">
-            <span class="page-footer__title"><b>Cat</b>Energy</span>
+            <span class="marketname"><b>Cat</b>Energy</span>
           </a>
         </div>
         <ul class="page-footer__socials-list">
-          <li class="page-footer__socials-item">
+          <li>
             <a class="page-footer__link page-footer__link--vk" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Мы во ВКонтакте</span>
             </a>
           </li>
-          <li class="page-footer__socials-item">
+          <li>
             <a class="page-footer__link page-footer__link--instagram" href="https://instagram.com/htmlacademy">
               <span class="visually-hidden">Мы в Инстаграме</span>
             </a>
           </li>
-          <li class="page-footer__socials-item">
+          <li>
             <a class="page-footer__link page-footer__link--fb" href="https://facebook.com/htmlacademy">
               <span class="visually-hidden">Мы в Фейсбуке</span>
             </a>
