--- a/source/form.html
+++ b/source/form.html
@@ -2,29 +2,28 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Подбор прграммы питания Cat Energy</title>
+    <meta name="viewport" content="width=width-device, initial-scale=1">
+    <title>Подбор программы питания Cat Energy</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
       <a class="page-header__logo" href="index.html">
-        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Логотип сайта Кэт Энерджи">
+        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="190" height="38" alt="Логотип сайта Кэт Энерджи">
       </a>
-      <a class="page-header__logo--marketname" href="index.html">
-        <span class="marketname"><b>Cat</b> Energy</span>
-      <a>
       <nav class="main-navigation">
         <button class="main-navigation__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <ul class="main-navigation__list">
           <li>
-            <a class="main-navigation__item current-item">Главная</a>
+            <a class="main-navigation__item" href="index.html">Главная</a>
           </li>
           <li>
             <a class="main-navigation__item" href="catalog.html">Каталог продукции</a>
           </li>
-          <li class="main-navigation__item">
-            <a href="form.html">Подбор программы</a>
+          <li>
+            <a class="main-navigation__item">Подбор программы</a>
           </li>
         </ul>
       </nav>
@@ -52,7 +51,7 @@
             </ul>
           </fieldset>
           <fieldset class="order__form-type">
-            <ul class="order-form__list">
+            <ul class="order__form-list">
               <li class="radiobutton-input">
                 <input class="radiobutton-input__field" type="radio" id="lost-weight" name="choose-program" value="lost-weight" checked>
                 <label class="radiobutton-input__label" for="lost-weight">Похудение</label>
@@ -68,7 +67,7 @@
             </ul>
           </fieldset>
           <fieldset class="order__form-type">
-            <legend class="order__form-legend">Контактные данные (владельца кота)</legend>
+            <p class="order__form-legend order__form-legend--item">Контактные данные <br> (владельца кота)</p>
             <ul class="order__form-list">
               <li class="text-input">
                 <label class="text-input__label" for="owner-name">E-mail:<sup>*</sup></label>
@@ -79,13 +78,32 @@
                 <input class="text-input__field text-input__field--phone" type="tel" id="owner-phone" name="phone" placeholder="8(960)900-60-90" required>
               </li>
             </ul>
-          </fieldset>
-          <fieldset class="order__form-type">
-            <legend class="order__form-legend">Комментарий</legend>
+            <p class="order__form-legend order__form-legend--item">Комментарий</p>
             <textarea class="textarea-field" name="comments-field" cols="30" rows="10" placeholder="Расскажите обо всех повадках кота"></textarea>
+            <p class="order__form-legend order__form-legend--item">Дополнительно</p>
+            <ul class="order__form-list">
+              <li class="checkbox-input">
+                <input type="checkbox" id="sugar" name="sugar" checked>
+                <label class="checkbox-input__label" for="sugar">Сахарозаменитель</label>
+              </li>
+              <li class="checkbox-input">
+                <input type="checkbox" id="water" name="water">
+                <label class="checkbox-input__label" for="water">Питьевая вода</label>
+              </li>
+              <li class="checkbox-input">
+                <input type="checkbox" id="milk" name="milk">
+                <label class="checkbox-input__label" for="milk">Молоко</label>
+              </li>
+              <li class="checkbox-input">
+                <input type="checkbox" id="vitamins" name="vitamins">
+                <label class="checkbox-input__label" for="vitamins">Витамины</label>
+              </li>
+            </ul>
           </fieldset>
-          <button class="button" type="submit">Отправить заявку</button>
-          <span class="order__form-notice"><sup>*</sup> &mdash; Обязательные поля</span>
+          <div class="order__submit-wrapper">
+            <button class="button button--submit" type="submit">Отправить заявку</button>
+            <span class="order__form-notice"><sup>*</sup> &mdash; Обязательные поля</span>
+          </div>
         </form>
       </section>
     </main>
@@ -97,35 +115,35 @@
           <p class="page-footer__contacts--address">ул. Большая Конюшенная, д. 19/8
 Санкт-Петербург</p>
         </div>
-        <img class="page-footer__contacts-map" src="img/map.jpg" width="1345" height="645" alt="Вы можете нас найти по адресу: ул.Большая Конюшенная, д.19/8, Санкт-Петербург">
+        <img class="page-footer__contacts-map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Вы можете нас найти по адресу: ул.Большая Конюшенная, д.19/8, Санкт-Петербург">
       </section>
       <section class="page-footer__socials">
         <h2 class="visually-hidden">Мы в соцсетях</h2>
         <div class="page-footer__socials-logo">
           <a class="page-footer__logo-link">
-            <span class="marketname"><b>Cat</b>Energy</span>
+            <img src="img/logo-footer.svg" width="128" height="24" alt="Логотип сайта Cat Energy">
           </a>
         </div>
         <ul class="page-footer__socials-list">
           <li>
             <a class="page-footer__link page-footer__link--vk" href="https://vk.com/htmlacademy">
-              <span class="visually-hidden">Мы во ВКонтакте</span>
+              <span>Мы во ВКонтакте</span>
             </a>
           </li>
           <li>
             <a class="page-footer__link page-footer__link--instagram" href="https://instagram.com/htmlacademy">
-              <span class="visually-hidden">Мы в Инстаграме</span>
+              <span>Мы в Инстаграме</span>
             </a>
           </li>
           <li>
             <a class="page-footer__link page-footer__link--fb" href="https://facebook.com/htmlacademy">
-              <span class="visually-hidden">Мы в Фейсбуке</span>
+              <span>Мы в Фейсбуке</span>
             </a>
           </li>
         </ul>
         <div class="page-footer__partner">
           <a class="page-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive">
-            <span class="visually-hidden">Наш пратнер - HTML Academy</span>
+            <span>Наш пратнер - HTML Academy</span>
           </a>
         </div>
       </section>
