--- a/source/index.html
+++ b/source/index.html
@@ -2,15 +2,14 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=width-device, initial-scale=1">
     <title>Cat Energy</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
       <a class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Логотип сайта Кэт Энерджи">
-      </a>
-      <a class="page-header__logo--marketname">
-        <span class="marketname"><b>Cat</b> Energy</span>
+        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="190" height="38" alt="Логотип сайта Кэт Энерджи">
       </a>
       <nav class="main-navigation">
         <button class="main-navigation__toggle" type="button">
@@ -23,28 +22,31 @@
           <li>
             <a class="main-navigation__item" href="catalog.html">Каталог продукции</a>
           </li>
-          <li class="main-navigation__item">
-            <a href="form.html">Подбор программы</a>
+          <li>
+            <a class="main-navigation__item" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </nav>
     </header>
     <main class="page-main">
       <section class="products">
-        <h2 class="products__title">Функциональное питание для котов</h2>
-        <p class="products__slogan">Занялся собой? Займись котом!</p>
+        <div class="products__title-wrapper">
+          <h2 class="products__title">Функциональное питание для котов</h2>
+          <p class="products__slogan">Занялся собой? Займись котом!</p>
+        </div>
+        <img class="products__img" src="img/index-can-mobile@1x.png" width="280" height="271" alt="Самый популярный товар - корм с курицей">
         <a class="button button--products" href="form.html">Подобрать программу</a>
         <ul class="products__list">
           <li class="products__item">
             <h3 class="products__item-title">Похудение</h3>
             <p class="products__item-description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a href="#" class="products__item-button">Каталог Slim</a>
+            <a href="#" class="button products__item--button">Каталог Slim</a>
           </li>
           <li class="products__item">
             <h3 class="products__item-title">Набор массы</h3>
             <p class="products__item-description">Заработать авторитет среди дворовых котов и даже собак?
 Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a href="#" class="products__item-button">Каталог Pro</a>
+            <a href="#" class="button products__item--button">Каталог Pro</a>
           </li>
         </ul>
       </section>
@@ -65,18 +67,16 @@
             <div class="good-result__stats-value">5 кг</div>
             <div class="good-result__stats-output">снижение веса</div>
           </div>
-          <div class="good-result__stats-item">
-            <div class="good-result__stats-value">60 дней</div>
-            <div class="good-result__stats-output">затрачено времени</div>
-          </div>
+          <div class="good-result__stats-value">60 дней</div>
+          <div class="good-result__stats-output">затрачено времени</div>
           <p class="good-result__cost">Затраты на питание: 15 000 руб.</p>
         </div>
         <div class="good-result__example toggle">
-          <input class="toggle__input" type="radio" id="input-before" name="good-result-input">
+          <input class="toggle__input" type="radio" id="input-before" name="good-result-input" checked>
           <input class="toggle__input" type="radio" id="input-after" name="good-result-input">
           <div class="good-result__example-images">
-            <img class="good-result__example-before" src="img/before-mobile.png" width="311" height="232" alt="Полный Борис до того, как начал питаться у нас">
-            <img class="good-result__example-after visually-hidden" src="img/after-mobile.png" width="251" height="240" alt="Стройный Борис после того, как начал питаться у нас">
+            <img class="good-result__example-before" src="img/before-mobile@1x.png" width="311" height="232" alt="Полный Борис до того, как начал питаться у нас">
+            <img class="good-result__example-after visually-hidden" src="img/after-mobile@1x.png" width="251" height="240" alt="Стройный Борис после того, как начал питаться у нас">
           </div>
           <div class="toggle__controls">
             <label class="toggle__label" for="input-before">Было</label>
@@ -94,35 +94,35 @@
           <p class="page-footer__contacts--address">ул. Большая Конюшенная, д. 19/8
 Санкт-Петербург</p>
         </div>
-        <img class="page-footer__contacts-map" src="img/map.jpg" width="1345" height="645" alt="Вы можете нас найти по адресу: ул.Большая Конюшенная, д.19/8, Санкт-Петербург">
+        <img class="page-footer__contacts-map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Вы можете нас найти по адресу: ул.Большая Конюшенная, д.19/8, Санкт-Петербург">
       </section>
       <section class="page-footer__socials">
         <h2 class="visually-hidden">Мы в соцсетях</h2>
         <div class="page-footer__socials-logo">
           <a class="page-footer__logo-link">
-            <span class="marketname"><b>Cat</b>Energy</span>
+            <img src="img/logo-footer.svg" width="128" height="24" alt="Логотип сайта Cat Energy">
           </a>
         </div>
         <ul class="page-footer__socials-list">
           <li>
             <a class="page-footer__link page-footer__link--vk" href="https://vk.com/htmlacademy">
-              <span class="visually-hidden">Мы во ВКонтакте</span>
+              <span>Мы во ВКонтакте</span>
             </a>
           </li>
           <li>
             <a class="page-footer__link page-footer__link--instagram" href="https://instagram.com/htmlacademy">
-              <span class="visually-hidden">Мы в Инстаграме</span>
+              <span>Мы в Инстаграме</span>
             </a>
           </li>
           <li>
             <a class="page-footer__link page-footer__link--fb" href="https://facebook.com/htmlacademy">
-              <span class="visually-hidden">Мы в Фейсбуке</span>
+              <span>Мы в Фейсбуке</span>
             </a>
           </li>
         </ul>
         <div class="page-footer__partner">
           <a class="page-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive">
-            <span class="visually-hidden">Наш пратнер - HTML Academy</span>
+            <span>Наш пратнер - HTML Academy</span>
           </a>
         </div>
       </section>
