--- a/source/index.html
+++ b/source/index.html
@@ -5,37 +5,40 @@
     <meta name="viewport" content="width=width-device, initial-scale=1">
     <title>Cat Energy</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
   </head>
   <body>
     <header class="page-header">
       <a class="page-header__logo">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="190" height="38" alt="Логотип сайта Кэт Энерджи">
       </a>
-      <nav class="main-navigation">
+      <nav class="main-navigation main-navigation--index">
         <button class="main-navigation__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <ul class="main-navigation__list">
           <li>
-            <a class="main-navigation__item current-item">Главная</a>
+            <a class="main-navigation__item main-navigation__item--index main-navigation__item--current">Главная</a>
           </li>
           <li>
-            <a class="main-navigation__item" href="catalog.html">Каталог продукции</a>
+            <a class="main-navigation__item main-navigation__item--index" href="catalog.html">Каталог продукции</a>
           </li>
           <li>
-            <a class="main-navigation__item" href="form.html">Подбор программы</a>
+            <a class="main-navigation__item main-navigation__item--index" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </nav>
     </header>
     <main class="page-main">
       <section class="products">
-        <div class="products__title-wrapper">
-          <h2 class="products__title">Функциональное питание для котов</h2>
-          <p class="products__slogan">Занялся собой? Займись котом!</p>
+        <div class="products__wrapper">
+          <div class="products__title-wrapper">
+            <h2 class="products__title">Функциональное <br> питание для котов</h2>
+            <p class="products__slogan">Занялся собой? Займись котом!</p>
+            <a class="button button--products" href="form.html">Подобрать программу</a>
+          </div>
+          <img class="products__img" src="img/index-can-mobile@1x.png" width="280" height="271" alt="Самый популярный товар - корм с курицей">
         </div>
-        <img class="products__img" src="img/index-can-mobile@1x.png" width="280" height="271" alt="Самый популярный товар - корм с курицей">
-        <a class="button button--products" href="form.html">Подобрать программу</a>
         <ul class="products__list">
           <li class="products__item">
             <h3 class="products__item-title">Похудение</h3>
@@ -53,10 +56,10 @@
       <section class="advantages">
         <h2 class="advantages__title">Как это работает</h2>
         <ul class="advantages__list">
-          <li class="advantages__item advantages__item--usefull">Функциональное питание содержит только полезные питательные вещества.</li>
-          <li class="advantages__item advantages__item--fast">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
-          <li class="advantages__item advantages__item--dish">Замените один-два приема обычной еды на наше функциональное питание.</li>
-          <li class="advantages__item advantages__item--result">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+          <li class="advantages__item advantages__item--usefull">Функциональное питание <br> содержит только полезные <br> питательные вещества.</li>
+          <li class="advantages__item advantages__item--fast">Выпускается в виде порошка, <br> который нужно лишь залить <br> кипятком и готово.</li>
+          <li class="advantages__item advantages__item--dish">Замените один-два приема <br> обычной еды на наше <br> функциональное питание.</li>
+          <li class="advantages__item advantages__item--result">Уже через месяц наслаждайтесь <br> изменениями к лучшему <br> вашего питомца!</li>
         </ul>
       </section>
       <article class="good-result">
@@ -89,10 +92,12 @@
     <footer class="page-footer">
       <section class="page-footer__contacts">
         <h2 class="visually-hidden">Наши контакты</h2>
-        <div class="page-footer__contacts-wrapper">
-          <p class="page-footer__contacts--invite">Приглашаем к сотрудничеству дилеров!</p>
-          <p class="page-footer__contacts--address">ул. Большая Конюшенная, д. 19/8
-Санкт-Петербург</p>
+        <div class="page-footer__contacts-wrapper page-footer__contacts-wrapper--index">
+          <p class="page-footer__contacts--invite">Приглашаем <br> к сотрудничеству <br> дилеров!</p>
+          <div class="page-footer__contacts--address">
+            <span>ул. Большая <br> Конюшенная, д. 19/8</span>
+            <span>Санкт-Петербург</span>
+          </div>
         </div>
         <img class="page-footer__contacts-map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Вы можете нас найти по адресу: ул.Большая Конюшенная, д.19/8, Санкт-Петербург">
       </section>
@@ -122,7 +127,10 @@
         </ul>
         <div class="page-footer__partner">
           <a class="page-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive">
-            <span>Наш пратнер - HTML Academy</span>
+            <span>HTML Academy</span>
+          </a>
+          <a class="page-footer__partner-link-logo">
+            <img src="img/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy">
           </a>
         </div>
       </section>
